# plan-tree

./: .gitignore  README.md  README.zh-CN.md  SKILL.md  package.json  pyproject.toml
.github/workflows/: release.yml
agents/: openai.yaml
references/: legacy-migration.md  maintenance-patterns.md
src/plan_tree_installer/: __init__.py  cli.py
